# oarepo-rdm

./: .gitignore  README.md  format.sh  oarepo.yaml  pyproject.toml  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  push.yaml  test.yaml
oarepo_rdm/: __init__.py  cli.py  config.py  errors.py  ext.py  initial_config.py  invenio_ext.py  oai.py  proxies.py
oarepo_rdm/i18n/: webpack.py
oarepo_rdm/model/presets/: __init__.py
oarepo_rdm/model/presets/rdm/: __init__.py  ext.py
oarepo_rdm/model/presets/rdm/records/: rdm_mapping.py
oarepo_rdm/model/presets/rdm/resources/files/: __init__.py  draft_file_resource_config.py  draft_media_file_resource_config.py  file_resource_config.py  media_file_resource_config.py
oarepo_rdm/model/presets/rdm/resources/records/: error_handlers.py  exports.py  resource.py  resource_config.py
oarepo_rdm/model/presets/rdm/services/files/: __init__.py  draft_file_service.py  draft_file_service_config.py  file_service.py  file_service_config.py
oarepo_rdm/model/presets/rdm/services/records/: rdm_complete_record_schema.py  rdm_facets.py  rdm_record_schema.py  rdm_record_ui_schema.py  search_options.py  service.py  service_config.py  service_config_links.py
oarepo_rdm/model/presets/rdm_metadata/: __init__.py  rdm.yaml  rdm_elements.yaml  rdm_record_root_labels.py  ui_labels.yaml
oarepo_rdm/oai/: __init__.py  config.py  percolator.py  presets.py  record.py  serializer.py
oarepo_rdm/records/: resolver.py
oarepo_rdm/records/systemfields/: pid.py
oarepo_rdm/requests/: guest_access.py
oarepo_rdm/resources/: config.py  resources.py  responses.py
oarepo_rdm/resources/records/: config.py  resource.py  response_handlers.py
oarepo_rdm/services/: collections.py  config.py  delegating.py  results.py  schemas.py  search.py  service.py
oarepo_rdm/services/access/: service.py
oarepo_rdm/services/pids/providers/: recid.py
oarepo_rdm/templates/semantic-ui/oarepo_rdm/: record_detail_iframe.html
oarepo_rdm/translations/: messages.mo  messages.pot
oarepo_rdm/translations/cs/LC_MESSAGES/: messages.mo  messages.po
oarepo_rdm/translations/en/LC_MESSAGES/: messages.mo  messages.po
oarepo_rdm/ui/: __init__.py  config.py  resource.py  templates.py  views.py
oarepo_rdm/ui/components/: __init__.py  communities_memberships_dump.py  deposit_form_defaults.py  doi_required.py  empty_record_pids.py  files_enabled.py  inject_parent_doi.py  pids_config_dump.py  rdm_vocabularies_dump.py  restricted_from_community.py
oarepo_rdm/ui/theme/: __init__.py  webpack.py
oarepo_rdm/ui/theme/assets/semantic-ui/js/oarepo_rdm_ui/: index.js
oarepo_rdm/ui/theme/assets/semantic-ui/js/oarepo_rdm_ui/form/: RDMBasicSections.js  RDMCompleteSections.js  RDMMinimalRecordSerializer.js  RDMMinimalSections.js  index.js
oarepo_rdm/ui/theme/assets/semantic-ui/js/oarepo_rdm_ui/form/components/: PIDFieldList.jsx  index.js
oarepo_rdm/ui/theme/assets/semantic-ui/js/oarepo_rdm_ui/form/sections/: RDMAlternativeIdentifiers.jsx  RDMCommunityAndAccess.jsx  RDMFiles.jsx  RDMFunding.jsx  RDMGeneralInformationBasic.jsx  RDMGeneralInformationComplete.jsx  index.js
oarepo_rdm/ui/theme/assets/semantic-ui/translations/oarepo_rdm_ui/: i18next.js
tests/: __init__.py  conftest.py  exports.py  handlers.py  modela.yaml  modelb.yaml  modelc.yaml  models.py  test_access_requests_resource.py  test_collections.py  test_delegating.py  test_extra_top_level_field.py  test_facets_config.py  test_info_component.py  test_invenio_index_init.py  test_mapping.py  test_multiplexing_schema.py  test_oai.py  test_parent_indexing.py  test_personorg_validators.py  test_pid.py  test_rdm_crud.py  test_resources.py  test_runtime_model.py  test_schema.py  test_search.py  test_search_drafts.py  test_secret_link_versions.py  test_secret_links.py  test_service.py  test_service_tasks.py  test_ui_components.py  test_views.py  utils.py
tests/test_ui/: __init__.py  conftest.py  test_deposit_create.py  test_oai.py  test_ui_components.py  test_uploads_new.py  test_views.py
tests/test_ui/ui/: __init__.py  modela.py  modelb.py  modelc.py
tests/test_ui/ui/templates/modelb/: deposit_create.html  deposit_edit.html  not_found.html  record_detail.html  record_search.html  tombstone.html
tests/test_ui/ui/templates/modelb/record_detail/: main.html
tests/ui/: __init__.py  common.py  modela.py  modelb.py  modelc.py
