[project]
name = "oarepo-rdm"
version = "3.1.1"
description = ""
readme = "README.md"
authors = [
    { name = "Ronald Krist", email = "krist@cesnet.cz" }
]
requires-python = ">=3.14,<3.15"

dependencies = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
    "oarepo-runtime>=4.0.0,<5.0.0",
    "oarepo-model>=2.0.0,<3.0.0",
    "oarepo-ui>=9.0.0,<10.0.0",

    # invenio dependencies
    "invenio-app-rdm>=14.0.0b0,<15.0.0",
    "invenio-search>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-rdm"

[project.optional-dependencies]
dev = [
    "oarepo-invenio-typing-stubs>=0.1.0dev0,<1.0.0",
    "types-PyYAML",
    "lxml-stubs",
]
tests = [
    "pytest-invenio>=4.0.0,<5.0.0",
    "pytest-oarepo>=3.0.0,<4.0.0",
]
oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[project.entry-points."invenio_config.module"]
oarepo_rdm = "oarepo_rdm.initial_config"

[project.entry-points."invenio_base.apps"]
oarepo_rdm = "oarepo_rdm.ext:OARepoRDM"

[project.entry-points."invenio_base.api_apps"]
oarepo_rdm = "oarepo_rdm.ext:OARepoRDM"

[project.entry-points."invenio_base.finalize_app"]
oarepo_rdm = "oarepo_rdm.ext:finalize_app"

[project.entry-points."invenio_base.api_finalize_app"]
oarepo_rdm = "oarepo_rdm.ext:finalize_app"

[project.entry-points."invenio_search.index_templates"]
oarepo_rdm_oai = "oarepo_rdm.oai.index_templates"

[project.entry-points."invenio_base.blueprints"]
oarepo_invenio_app_rdm_records = "oarepo_rdm.ui.views:create_records_blueprint"
# just to have html templates available. Does not register anything else
templates_app_rdm_records = "oarepo_rdm.ui.templates:records_blueprint"
templates_app_rdm = "oarepo_rdm.ui.templates:rdm_blueprint"
templates_app_rdm_requests = "oarepo_rdm.ui.templates:requests_blueprint"
templates_app_rdm_communities = "oarepo_rdm.ui.templates:communities_blueprint"
templates_app_rdm_users = "oarepo_rdm.ui.templates:users_blueprint"
templates_app_rdm_administration = "oarepo_rdm.ui.templates:administration_blueprint"
oarepo_rdm_templates = "oarepo_rdm.ui.templates:oarepo_rdm_blueprint"
# reuse app rdm blueprints

[project.entry-points."invenio_search.mappings"]
oarepo_rdm_oai = "oarepo_rdm.oai.mappings"

[project.entry-points."oarepo.cli.search.init"]
install_percollators = "oarepo_rdm.oai.percolator:init_percolators"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_rdm",
]

[[tool.mypy.overrides]]
follow_untyped_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
